# juodzekas

./: .env.example  .gitignore  .gitmodules  Cargo.toml  NEXT_STEPS_WITNESS_OPTIMIZATION.md  README.md  SUBMODULES.md  WITNESS_OPTIMIZATION.md
circuits/: .gitignore  README.md
circuits/common/: babyjubjub.circom  elgamal.circom
circuits/shuffle_encrypt/: shuffle_encrypt.circom  shuffle_encrypt_template.circom
clients/dealer/: Cargo.toml  README.md
clients/dealer/src/: main.rs
clients/tui/: Cargo.toml  README.md
clients/tui/src/: contract_msg.rs  game.rs  game_logic.rs  main.rs  tui_logger.rs  wallet.rs
contracts/juodzekas/: Cargo.toml  README.md
contracts/juodzekas/src/: game_logic.rs  lib.rs  msg.rs  state.rs  zk.rs
contracts/juodzekas/src/contract/: execute.rs  instantiate.rs  mod.rs  query.rs  reveal.rs  tests.rs
contracts/juodzekas/tests/: integration.rs  integration_bankroll.rs  integration_real_zk.rs  testnet_zk.rs
src/: contract.rs  msg.rs  state.rs  zk.rs
