[package]
name = "juodzekas-dealer"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.13"
tendermint-rpc = { version = "0.37", features = ["http-client"] }
zk-shuffle = { path = "../../packages/zk-shuffle" }
blackjack = { path = "../../packages/blackjack", features = ["edge"] }
tokio = { version = "1.0", features = ["rt", "macros"] }
rand = "0.8"
rand_chacha = "0.3"
base64 = "0.21"
ark-std = { version = "0.5", features = ["parallel"] }
ark-ec = { version = "0.5", features = ["parallel"] }
ark-bn254 = { version = "0.5" }
ark-ff = "0.5"
num-bigint = "0.4"
log = { version = "0.4", features = ["std"] }
env_logger = "0.11"
mob = { git = "https://github.com/burnt-labs/mob", branch = "feat/actions", features = ["rpc-client", "rust-signer"] }
bip39 = { version = "2.0", features = ["rand"] }
dotenvy = "0.15"
clap = { version = "4", features = ["derive", "env"] }
xion-types = { git = "https://github.com/burnt-labs/xion-types", features = ["xion"] }
juodzekas = { path = "../../contracts/juodzekas", features = ["library"] }
cosmwasm-std = "3"
