[package]
name = "juodzekas-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.30.0"
crossterm = "0.29.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# We might need to depend on the contract's messages later
# juodzekas = { path = "../../contracts/juodzekas", features = ["library"] }
