[package]
name = "juodzekas-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.30.0"
crossterm = "0.29.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zk-shuffle = { path = "../../packages/zk-shuffle" }
tokio = { version = "1.0", features = ["full"] }
rand = "0.8"
rand_chacha = "0.3"
ark-std = { version = "0.5", features = ["parallel"] }
ark-ec = { version = "0.5", features = ["parallel"] }
ark-bn254 = { version = "0.5"}
ark-groth16 = { version = "0.5", features = ["parallel"] }
log = { version = "0.4", features = ["std"] }
# We might need to depend on the contract's messages later
# juodzekas = { path = "../../contracts/juodzekas", features = ["library"] }
