[package]
name = "juodzekas-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.30.0"
crossterm = "0.29.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.13"
tendermint-rpc = { version = "0.37", features = ["http-client"] }
zk-shuffle = { path = "../../packages/zk-shuffle" }
blackjack = { path = "../../packages/blackjack" }
tokio = { version = "1.0", features = ["full"] }
rand = "0.8"
rand_chacha = "0.3"
base64 = "0.21"
ark-std = { version = "0.5", features = ["parallel"] }
ark-ec = { version = "0.5", features = ["parallel"] }
ark-bn254 = { version = "0.5"}
ark-groth16 = { version = "0.5", features = ["parallel"] }
log = { version = "0.4", features = ["std"] }
mob = { git = "https://github.com/burnt-labs/mob", branch = "feat/actions", features = ["rpc-client", "rust-signer"], optional = true }
bip39 = { version = "2.0", features = ["rand"], optional = true }
num-bigint = "0.4"
ark-ff = "0.5"
dotenvy = "0.15"
xion-types = { git = "https://github.com/burnt-labs/xion-types", features = ["xion"]}
juodzekas = { path = "../../contracts/juodzekas", features = ["library"] }

[features]
default = ["wallet"]
wallet = ["mob", "bip39"]
