[package]
name = "juodzekas"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = []
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = "3.0.2"
cosmwasm-std = { version = "3.0.2", features = ["stargate"] }
cosmwasm-storage = "1.5.0"
cw-storage-plus = "3.0.1"
cw2 = "3.0.0"
schemars = "0.8.15"
serde = { version = "1.0.189", default-features = false, features = ["derive"] }
serde-json-wasm = "1.0.0"
thiserror = "1.0.49"
hex = "0.4.3"

[dev-dependencies]
cw-multi-test = "3.0.1"
