[package]
name = "juodzekas"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = []
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = "3.0.2"
cosmwasm-std = { version = "3.0.2", features = ["stargate", "cosmwasm_2_0"] }
cosmwasm-storage = "1.5.0"
cw-storage-plus = "3.0.1"
cw2 = "3.0.0"
schemars = "0.8.15"
serde = { version = "1.0.189", default-features = false, features = ["derive"] }
serde-json-wasm = "1.0.0"
thiserror = "1.0.49"
hex = "0.4.3"
prost = { version = "0.13", default-features = false, features = ["prost-derive"] }
blackjack = { path = "../../packages/blackjack" }
xion-types = { git = "https://github.com/burnt-labs/xion-types", features = ["xion"]}
getrandom = { version = "0.2.10", features = ["custom"], default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
cw-multi-test = { version = "3.0.1", features = ["cosmwasm_2_0"] }
anyhow = "1.0"
prost = "0.13"
zk-shuffle = { path = "../../packages/zk-shuffle" }
ark-std = "0.5"
ark-ec = "0.5"
ark-bn254 = "0.5"
rand_chacha = "0.3"
ark-ff = "0.5"
serde-json-wasm = "1.0"
tokio = { version = "1", features = ["rt", "macros"] }
num-bigint = "0.4"
mob = { git = "https://github.com/burnt-labs/mob", branch = "feat/actions", features = ["rpc-client", "rust-signer"]}
bip39 = { version = "2.0" }
log = "0.4"
env_logger = "0.11"
bincode = "1.3"
serde_json = "1.0"
dotenvy = "0.15"
tendermint-rpc = { version = "0.37", default-features = false }
